# pyfetch

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  python-tests.yml
PyFetch/: __init__.py  __main__.py  cli.py  exceptions.py  http_client.py
tests/: test_cli.py  test_exceptions.py  test_http_client.py
