[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "PyFetch"
version = "1.0.0"
description = "A simple HTTP CLI client"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "Malte Mindedal" }]
requires-python = ">=3.8"
classifiers = ["Programming Language :: Python :: 3", "Operating System :: OS Independent"]
dependencies = ["requests>=2.32.4", "tqdm>=4.66.0"]

[project.scripts]
pyfetch = "PyFetch.cli:main"

[tool.setuptools.packages.find]
include = ["PyFetch", "PyFetch.*"]

[dependency-groups]
dev = ["mypy>=1.10,<1.11", "ruff>=0.11.5,<0.12", "types-requests>=2.32.0,<3"]

[tool.mypy]
python_version = "3.8"
strict = true
files = ["PyFetch", "tests"]

[[tool.mypy.overrides]]
module = ["tqdm"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
