[build-system]
requires = ["setuptools>=61,<77"]
build-backend = "setuptools.build_meta"

[project]
name = "PyFetch"
version = "1.0.0"
description = "A simple HTTP CLI client"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Malte Mindedal" }]
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3", "Operating System :: OS Independent"]
dependencies = ["requests>=2.33.1", "tqdm>=4.66.0", "urllib3>=2.6.3"]

[project.scripts]
pyfetch = "PyFetch.cli:main"

[tool.setuptools.packages.find]
include = ["PyFetch", "PyFetch.*"]

[dependency-groups]
dev = ["mypy>=1.13,<2", "ruff>=0.11.5,<0.12", "types-requests>=2.33.0,<3"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["PyFetch", "tests"]

[[tool.mypy.overrides]]
module = ["tqdm"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
